--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -30,6 +30,7 @@ $main-gold: #e8aa14;
 $color-gray: #817f75;
 $color-gray-60: rgba(190, 190, 190, 0.4);
 $dark-gray: #3a3a3a;
+$dark-gray-60: rgba(58, 58, 58, 0.6);
 $dark-green: #009541;
 $dark-green-80: rgba(0, 149, 65, .5);
 $tomato: tomato;
