--- a/app/styles/recipeDetail.module.scss
+++ b/app/styles/recipeDetail.module.scss
@@ -9,18 +9,30 @@
     align-items: center;
     justify-content: center;
     padding: 2rem 0 2rem 0;
+
+    h3 {
+    margin-top: 2rem;
 }
+}
+
 .img {
-width: 600px;
-object-fit: contain;
+    min-width: 300px;
+    width:100%;
+    max-width: 700px;
+    height: 100%;
+    object-fit: contain;
 }
+
 .list_items {
     list-style: decimal;
     margin-top: 1rem;
+    padding: 0 1rem;
 }
 
 .name {
-    font-size: 4rem;
+    font-size: 2.5rem;
+    margin-bottom: 1rem;
+    text-align: center;
 }
 
 .rate {
@@ -33,3 +45,4 @@ object-fit: contain;
     font-size: 2rem;
     margin: 1rem 0;
 }
+
