--- a/app/styles/login.module.scss
+++ b/app/styles/login.module.scss
@@ -3,10 +3,8 @@
 
 .container {
     display: flex;
-    align-items: start;
+    align-items: flex-start;
     justify-content: center;
-
-
     max-width: 1400px;
     margin: 5rem auto;
     padding: 1rem;
@@ -24,6 +22,10 @@
     border-radius: 1rem;
     background: rgba(52, 52, 52, 0.2);
     backdrop-filter: blur(1px);
+
+    h1 {
+        margin-bottom: 1rem;
+    }
 
     label {
         font-size: 1.5rem;
